--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,17 @@
 
 	<head>
 		<title>Creative Project 4</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href="stylesheets/style.css" rel="stylesheet">
 		<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
 	</head>
 
 	<body>
 		<h1>I heard you like animals</h1>	
 		<form id="animal-form">
 			Enter an animal: <input type="text" id="animal" value="kitty"><br>
-			<input id="submit-animal" type="submit" value="Submit">
+			<input id="submit-animal" type="submit" value="Submit" class="btn btn-info">
 		</form>
 		
 
