--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<h1>I heard you like animals</h1>	
 		<form id="animal-form">
-			Enter an animal: <input type="text" id="animal" value="kitty"><br>
+			Enter an animal: <input type="text" id="animal" value="kitty" class="form-control"><br>
 			<input id="submit-animal" type="submit" value="Submit" class="btn btn-info">
 		</form>
 		
