--- a/public/index.html
+++ b/public/index.html
@@ -12,18 +12,14 @@
 	</head>
 
 	<body>
-		<h1>I heard you like animals</h1>	
+		<h1 id="head">I heard you like animals</h1>	
 		<form id="animal-form">
-			Enter an animal: <input type="text" id="animal" value="kitty" class="form-control"><br>
+			Enter an animal: <input type="text" id="animal" value="kitten" class="form-control"><br>
 			<input id="submit-animal" type="submit" value="Submit" class="btn btn-info">
 		</form>
 		
-
-		<script>
-
-
-		</script>		
-
+		<div id="popup">
+		</div>
 	</body>
 
 </html>
